--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
         "test": "echo \"No test specified\""
     },
     "devDependencies": {
+        "@types/react": "^16.9.34",
+        "@types/react-dom": "^16.9.6",
         "@typescript-eslint/eslint-plugin": "^2.27.0",
         "@typescript-eslint/parser": "^2.27.0",
         "babel-eslint": "^10.1.0",
@@ -58,6 +60,8 @@
         "typescript": "3.8.3"
     },
     "peerDependencies": {
+        "@types/react": "^16.9.34",
+        "@types/react-dom": "^16.9.6",
         "@typescript-eslint/eslint-plugin": "^2.27.0",
         "@typescript-eslint/parser": "^2.27.0",
         "babel-eslint": "^10.1.0",
