--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
     "name": "@ascend-innovations/eslint-config",
-    "version": "0.1.6",
+    "version": "0.2.0",
     "description": "Ascend's ESLint config for writing clean consistent code",
     "private": false,
     "publishConfig": {
         "access": "public"
     },
     "license": "MIT",
-    "main": "index.js",
     "repository": {
         "type": "git",
         "url": "https://github.com/ascend-innovations/eslint-config-ascend"
@@ -16,9 +15,11 @@
         "lint",
         "eslint",
         "eslintconfig",
+        "eslintreact",
         "config",
         "ascend",
         "javascript",
+        "react",
         "typescript",
         "eslinttypescript",
         "tslint",
@@ -42,40 +43,42 @@
         "test": "echo \"No test specified\""
     },
     "devDependencies": {
-        "@types/react": "^16.9.35",
+        "@types/react": "^16.9.46",
         "@types/react-dom": "^16.9.8",
-        "@typescript-eslint/eslint-plugin": "^3.1.0",
-        "@typescript-eslint/parser": "^3.1.0",
+        "@typescript-eslint/eslint-plugin": "^3.9.0",
+        "@typescript-eslint/parser": "^3.9.0",
         "babel-eslint": "^10.1.0",
-        "eslint": "^7.1.0",
-        "eslint-config-airbnb-typescript": "^8.0.2",
+        "eslint": "^7.7.0",
+        "eslint-config-airbnb": "^18.2.0",
+        "eslint-config-airbnb-typescript": "^9.0.0",
         "eslint-config-prettier": "^6.11.0",
-        "eslint-plugin-html": "^6.0.2",
-        "eslint-plugin-import": "^2.20.2",
-        "eslint-plugin-jsx-a11y": "^6.2.3",
-        "eslint-plugin-prettier": "^3.1.3",
-        "eslint-plugin-react": "^7.20.0",
-        "eslint-plugin-react-hooks": "^4.0.4",
+        "eslint-plugin-html": "^6.0.3",
+        "eslint-plugin-import": "^2.22.0",
+        "eslint-plugin-jsx-a11y": "^6.3.1",
+        "eslint-plugin-prettier": "^3.1.4",
+        "eslint-plugin-react": "^7.20.6",
+        "eslint-plugin-react-hooks": "^4.1.0",
         "prettier": "^2.0.5",
-        "typescript": "3.9.3"
+        "typescript": "3.9.7"
     },
     "peerDependencies": {
-        "@types/react": "^16.9.35",
+        "@types/react": "^16.9.46",
         "@types/react-dom": "^16.9.8",
-        "@typescript-eslint/eslint-plugin": "^3.1.0",
-        "@typescript-eslint/parser": "^3.1.0",
+        "@typescript-eslint/eslint-plugin": "^3.9.0",
+        "@typescript-eslint/parser": "^3.9.0",
         "babel-eslint": "^10.1.0",
-        "eslint": "^7.1.0",
-        "eslint-config-airbnb-typescript": "^8.0.2",
+        "eslint": "^7.7.0",
+        "eslint-config-airbnb": "^18.2.0",
+        "eslint-config-airbnb-typescript": "^9.0.0",
         "eslint-config-prettier": "^6.11.0",
-        "eslint-plugin-html": "^6.0.2",
-        "eslint-plugin-import": "^2.20.2",
-        "eslint-plugin-jsx-a11y": "^6.2.3",
-        "eslint-plugin-prettier": "^3.1.3",
-        "eslint-plugin-react": "^7.20.0",
-        "eslint-plugin-react-hooks": "^4.0.4",
+        "eslint-plugin-html": "^6.0.3",
+        "eslint-plugin-import": "^2.22.0",
+        "eslint-plugin-jsx-a11y": "^6.3.1",
+        "eslint-plugin-prettier": "^3.1.4",
+        "eslint-plugin-react": "^7.20.6",
+        "eslint-plugin-react-hooks": "^4.1.0",
         "prettier": "^2.0.5",
-        "typescript": "3.9.3"
+        "typescript": "3.9.7"
     },
     "engines": {
         "node": ">= 10"
