--- a/package.json
+++ b/package.json
@@ -43,44 +43,45 @@
         "test": "echo \"No test specified\""
     },
     "devDependencies": {
-        "@types/react": "^16.9.46",
-        "@types/react-dom": "^16.9.8",
-        "@typescript-eslint/eslint-plugin": "^3.9.0",
-        "@typescript-eslint/parser": "^3.9.0",
+        "@types/react": "^17.0.24",
+        "@types/react-dom": "^17.0.9",
+        "@typescript-eslint/eslint-plugin": "^4.32.0",
+        "@typescript-eslint/parser": "^4.32.0",
         "babel-eslint": "^10.1.0",
-        "eslint": "^7.7.0",
-        "eslint-config-airbnb": "^18.2.0",
-        "eslint-config-airbnb-typescript": "^9.0.0",
-        "eslint-config-prettier": "^6.11.0",
-        "eslint-plugin-html": "^6.0.3",
-        "eslint-plugin-import": "^2.22.0",
-        "eslint-plugin-jsx-a11y": "^6.3.1",
-        "eslint-plugin-prettier": "^3.1.4",
-        "eslint-plugin-react": "^7.20.6",
-        "eslint-plugin-react-hooks": "^4.1.0",
-        "prettier": "^2.0.5",
-        "typescript": "3.9.7"
+        "eslint": "^7.32.0",
+        "eslint-config-airbnb": "^18.2.1",
+        "eslint-config-airbnb-typescript": "^14.0.0",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-html": "^6.2.0",
+        "eslint-plugin-import": "^2.24.2",
+        "eslint-plugin-jsx-a11y": "^6.4.1",
+        "eslint-plugin-prettier": "^4.0.0",
+        "eslint-plugin-react": "^7.26.0",
+        "eslint-plugin-react-hooks": "^4.2.0",
+        "prettier": "^2.4.1",
+        "typescript": "4.4.3"
     },
     "peerDependencies": {
-        "@types/react": "^16.9.46",
-        "@types/react-dom": "^16.9.8",
-        "@typescript-eslint/eslint-plugin": "^3.9.0",
-        "@typescript-eslint/parser": "^3.9.0",
+        "@types/react": "^17.0.24",
+        "@types/react-dom": "^17.0.9",
+        "@typescript-eslint/eslint-plugin": "^4.32.0",
+        "@typescript-eslint/parser": "^4.32.0",
         "babel-eslint": "^10.1.0",
-        "eslint": "^7.7.0",
-        "eslint-config-airbnb": "^18.2.0",
-        "eslint-config-airbnb-typescript": "^9.0.0",
-        "eslint-config-prettier": "^6.11.0",
-        "eslint-plugin-html": "^6.0.3",
-        "eslint-plugin-import": "^2.22.0",
-        "eslint-plugin-jsx-a11y": "^6.3.1",
-        "eslint-plugin-prettier": "^3.1.4",
-        "eslint-plugin-react": "^7.20.6",
-        "eslint-plugin-react-hooks": "^4.1.0",
-        "prettier": "^2.0.5",
-        "typescript": "3.9.7"
+        "eslint": "^7.32.0",
+        "eslint-config-airbnb": "^18.2.1",
+        "eslint-config-airbnb-typescript": "^14.0.0",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-html": "^6.2.0",
+        "eslint-plugin-import": "^2.24.2",
+        "eslint-plugin-jsx-a11y": "^6.4.1",
+        "eslint-plugin-prettier": "^4.0.0",
+        "eslint-plugin-react": "^7.26.0",
+        "eslint-plugin-react-hooks": "^4.2.0",
+        "prettier": "^2.4.1",
+        "typescript": "4.4.3"
     },
-    "engines": {
-        "node": ">= 10"
+    "volta": {
+        "node": "16.10.0",
+        "yarn": "1.22.11"
     }
 }
