--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
-    "name": "@ascend-innovations/eslint-config",
-    "version": "0.2.1",
+    "name": "ascend-eslint-configs",
+    "version": "0.0.0",
     "description": "Ascend's ESLint config for writing clean, consistent code",
-    "private": false,
-    "publishConfig": {
-        "access": "public"
-    },
+    "private": true,
     "license": "MIT",
     "repository": {
         "type": "git",
@@ -14,17 +11,19 @@
     "keywords": [
         "lint",
         "eslint",
-        "eslintconfig",
-        "eslintreact",
+        "eslint config",
+        "eslint react",
         "config",
         "ascend",
         "javascript",
         "react",
         "typescript",
-        "eslinttypescript",
+        "eslint typescript",
         "tslint",
         "prettier",
-        "ecmascript"
+        "ecmascript",
+        "eslint svelte",
+        "svelte"
     ],
     "author": "Ascend Innovations (https://ascend-innovations.com)",
     "contributors": [
@@ -38,50 +37,24 @@
     },
     "homepage": "https://github.com/ascend-innovations/eslint-config-ascend",
     "scripts": {
+        "bootstrap": "lerna bootstrap",
         "lint": "eslint .",
         "lint:fix": "eslint --fix",
-        "test": "echo \"No test specified\""
+        "test": "echo \"No test specified\"",
+        "clean:nm": "lerna clean && rimraf node_modules",
+        "clean:nuke": "yarn clean:nm && rimraf yarn.lock,node_modules",
+        "clean:reset": "yarn clean:nuke && yarn install"
     },
     "devDependencies": {
-        "@types/react": "^17.0.24",
-        "@types/react-dom": "^17.0.9",
-        "@typescript-eslint/eslint-plugin": "^4.32.0",
-        "@typescript-eslint/parser": "^4.32.0",
-        "babel-eslint": "^10.1.0",
-        "eslint": "^7.32.0",
-        "eslint-config-airbnb": "^18.2.1",
-        "eslint-config-airbnb-typescript": "^14.0.0",
-        "eslint-config-prettier": "^8.3.0",
-        "eslint-plugin-html": "^6.2.0",
-        "eslint-plugin-import": "^2.24.2",
-        "eslint-plugin-jsx-a11y": "^6.4.1",
-        "eslint-plugin-prettier": "^4.0.0",
-        "eslint-plugin-react": "^7.26.0",
-        "eslint-plugin-react-hooks": "^4.2.0",
-        "prettier": "^2.4.1",
-        "typescript": "4.4.3"
-    },
-    "peerDependencies": {
-        "@types/react": "^17.0.24",
-        "@types/react-dom": "^17.0.9",
-        "@typescript-eslint/eslint-plugin": "^4.32.0",
-        "@typescript-eslint/parser": "^4.32.0",
-        "babel-eslint": "^10.1.0",
-        "eslint": "^7.32.0",
-        "eslint-config-airbnb": "^18.2.1",
-        "eslint-config-airbnb-typescript": "^14.0.0",
-        "eslint-config-prettier": "^8.3.0",
-        "eslint-plugin-html": "^6.2.0",
-        "eslint-plugin-import": "^2.24.2",
-        "eslint-plugin-jsx-a11y": "^6.4.1",
-        "eslint-plugin-prettier": "^4.0.0",
-        "eslint-plugin-react": "^7.26.0",
-        "eslint-plugin-react-hooks": "^4.2.0",
-        "prettier": "^2.4.1",
-        "typescript": "4.4.3"
+        "lerna": "^4.0.0",
+        "lerna-update-wizard": "^0.17.8",
+        "rimraf": "^3.0.2"
     },
     "volta": {
         "node": "16.10.0",
         "yarn": "1.22.11"
-    }
+    },
+    "workspaces": [
+        "packages/*"
+    ]
 }
