--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,11 +2,11 @@
     // See http://go.microsoft.com/fwlink/?LinkId=827846 to learn about workspace recommendations.
     // List of extensions which should be recommended for users of this workspace.
     "recommendations": [
-        "dbaeumer.vscode-eslint"
+        "dbaeumer.vscode-eslint",
+        "editorconfig.editorconfig"
     ],
     // List of extensions recommended by VS Code that should not be recommended for users of this workspace.
     "unwantedRecommendations": [
         "esbenp.prettier-vscode", // You don't need the prettier extension with this setup
-        "editorconfig.editorconfig", // You don't need editor config with this setup
-    ]
+    ],
 }
