--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,8 @@
 {
+    // Specifies how the working directories ESLint is using are computed. ESLint resolves configuration files (e.g. eslintrc, .eslintignore) relative to a working directory so it is important to configure this correctly... especially for monorepos.
+    "eslint.workingDirectories": [
+        "./packages/*"
+    ],
     //
     // Auto-run linting on save
     //
@@ -22,4 +26,6 @@
     "[typescriptreact]": {
         "editor.formatOnSave": false
     },
+    // show eslint icon at bottom toolbar
+    "eslint.alwaysShowStatus": true,
 }
