--- a/packages/eslint-config-ts/tsconfig.json
+++ b/packages/eslint-config-ts/tsconfig.json
@@ -1,8 +1,8 @@
 {
     "compilerOptions": {
         /* Basic Options */
-        "target": "es5" /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017','ES2018' or 'ESNEXT'. */,
-        "module": "commonjs" /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */,
+        "target": "ESNEXT" /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017','ES2018' or 'ESNEXT'. */,
+        "module": "ESNext" /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */,
         "noEmit": true /* Do not compile the JS (or TS) files in this project on build */,
         "allowJs": true, /* Allow javascript files to be compiled. */
         // "forceConsistentCasingInFileNames": true,
@@ -53,10 +53,4 @@
         // "experimentalDecorators": true,        /* Enables experimental support for ES7 decorators. */
         // "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */,
     },
-    "exclude": [
-        "node_modules"
-    ],
-    "include": [
-        "**/*"
-    ]
 }
