--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -30,6 +30,7 @@
     },
     "devDependencies": {
         "@babel/eslint-parser": "^7.15.7",
+        "@babel/eslint-plugin": "^7.14.5",
         "eslint": "^7.32.0",
         "eslint-config-airbnb": "^18.2.1",
         "eslint-config-prettier": "^8.3.0",
@@ -42,6 +43,8 @@
         "prettier": "^2.4.1"
     },
     "peerDependencies": {
+        "@babel/core": "^7.15.5",
+        "@babel/preset-env": "^7.15.6",
         "@babel/eslint-parser": "^7.15.7",
         "eslint": "^7.32.0",
         "eslint-config-airbnb": "^18.2.1",
@@ -53,6 +56,26 @@
         "eslint-plugin-react": "^7.26.1",
         "eslint-plugin-react-hooks": "^4.2.0",
         "prettier": "^2.4.1"
+    },
+    "peerDependenciesMeta": {
+        "eslint-plugin-jsx-a11y": {
+            "optional": true
+        },
+        "eslint-plugin-react": {
+            "optional": true
+        },
+        "eslint-plugin-react-hooks": {
+            "optional": true
+        },
+        "prettier": {
+            "optional": true
+        },
+        "eslint-plugin-prettier": {
+            "optional": true
+        },
+        "eslint-config-prettier": {
+            "optional": true
+        }
     },
     "volta": {
         "node": "16.10.0",
