--- a/package.json
+++ b/package.json
@@ -48,6 +48,14 @@
     "devDependencies": {
         "@babel/core": "^7.15.5",
         "@babel/preset-env": "^7.15.6",
+        "@commitlint/config-conventional": "^13.2.0",
+        "@semantic-release/changelog": "^6.0.0",
+        "@semantic-release/commit-analyzer": "^9.0.1",
+        "@semantic-release/git": "^10.0.0",
+        "@semantic-release/npm": "^8.0.0",
+        "@semantic-release/release-notes-generator": "^10.0.2",
+        "commitizen": "^4.2.4",
+        "cz-conventional-changelog": "^3.3.0",
         "lerna": "^4.0.0",
         "lerna-update-wizard": "^0.17.8",
         "rimraf": "^3.0.2"
