--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "ascend-eslint-configs",
-    "version": "0.0.0",
+    "version": "0.0.0-ascend-eslint",
     "description": "Ascend's ESLint config for writing clean, consistent code",
     "private": true,
     "license": "MIT",
@@ -8,6 +8,17 @@
         "type": "git",
         "url": "https://github.com/ascend-innovations/eslint-config-ascend"
     },
+    "author": "Ascend Innovations (https://ascend-innovations.com)",
+    "contributors": [
+        {
+            "name": "Chris Hahn",
+            "url": "https://github.com/codingwithchris"
+        }
+    ],
+    "bugs": {
+        "url": "https://github.com/ascend-innovations/eslint-config-ascend/issues"
+    },
+    "homepage": "https://github.com/ascend-innovations/eslint-config-ascend",
     "keywords": [
         "lint",
         "eslint",
@@ -25,29 +36,25 @@
         "eslint svelte",
         "svelte"
     ],
-    "author": "Ascend Innovations (https://ascend-innovations.com)",
-    "contributors": [
-        {
-            "name": "Chris Hahn",
-            "url": "https://github.com/codingwithchris"
-        }
-    ],
-    "bugs": {
-        "url": "https://github.com/ascend-innovations/eslint-config-ascend/issues"
-    },
-    "homepage": "https://github.com/ascend-innovations/eslint-config-ascend",
     "scripts": {
+        "prepare": "./.bin/prepare.sh",
         "bootstrap": "lerna bootstrap",
         "lint": "eslint .",
         "lint:fix": "eslint --fix",
         "test": "echo \"No test specified\"",
         "clean:nm": "lerna clean && rimraf node_modules",
-        "clean:nuke": "rimraf yarn.lock && yarn clean:nm",
+        "clean:husky": "rimraf .husky",
+        "clean:nuke": "rimraf yarn.lock && && yarn clean:husky && yarn clean:nm",
         "clean:reset": "yarn clean:nuke && yarn install"
+    },
+    "volta": {
+        "node": "16.10.0",
+        "yarn": "1.22.11"
     },
     "devDependencies": {
         "@babel/core": "^7.15.5",
         "@babel/preset-env": "^7.15.6",
+        "@commitlint/cli": "^13.2.0",
         "@commitlint/config-conventional": "^13.2.0",
         "@semantic-release/changelog": "^6.0.0",
         "@semantic-release/commit-analyzer": "^9.0.1",
@@ -56,18 +63,18 @@
         "@semantic-release/release-notes-generator": "^10.0.2",
         "commitizen": "^4.2.4",
         "cz-conventional-changelog": "^3.3.0",
+        "husky": "^7.0.2",
         "lerna": "^4.0.0",
         "lerna-update-wizard": "^0.17.8",
+        "multi-semantic-release": "^2.9.0",
         "rimraf": "^3.0.2"
-    },
-    "volta": {
-        "node": "16.10.0",
-        "yarn": "1.22.11"
     },
     "workspaces": [
         "packages/*"
     ],
-    "dependencies": {
-        "multi-semantic-release": "^2.9.0"
+    "config": {
+        "commitizen": {
+            "path": "./node_modules/cz-conventional-changelog"
+        }
     }
 }
