feat: add github action for releases

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     ],
     "scripts": {
         "prepare": "./.bin/prepare.sh",
+        "release": "multi-semantic-release",
         "bootstrap": "lerna bootstrap",
         "lint": "eslint .",
         "lint:fix": "eslint --fix",
