--- a/package.json
+++ b/package.json
@@ -1,31 +1,13 @@
 {
-    "name": "@ascend-innovations/eslint-config",
-    "version": "0.2.1",
+    "name": "ascend-eslint-configs",
+    "version": "0.0.0-ascend-eslint",
     "description": "Ascend's ESLint config for writing clean, consistent code",
-    "private": false,
-    "publishConfig": {
-        "access": "public"
-    },
+    "private": true,
     "license": "MIT",
     "repository": {
         "type": "git",
         "url": "https://github.com/ascend-innovations/eslint-config-ascend"
     },
-    "keywords": [
-        "lint",
-        "eslint",
-        "eslintconfig",
-        "eslintreact",
-        "config",
-        "ascend",
-        "javascript",
-        "react",
-        "typescript",
-        "eslinttypescript",
-        "tslint",
-        "prettier",
-        "ecmascript"
-    ],
     "author": "Ascend Innovations (https://ascend-innovations.com)",
     "contributors": [
         {
@@ -37,50 +19,63 @@
         "url": "https://github.com/ascend-innovations/eslint-config-ascend/issues"
     },
     "homepage": "https://github.com/ascend-innovations/eslint-config-ascend",
+    "keywords": [
+        "lint",
+        "eslint",
+        "eslint config",
+        "eslint react",
+        "config",
+        "ascend",
+        "javascript",
+        "react",
+        "typescript",
+        "eslint typescript",
+        "tslint",
+        "prettier",
+        "ecmascript",
+        "eslint svelte",
+        "svelte"
+    ],
     "scripts": {
+        "prepare": "./.bin/prepare.sh",
+        "release": "multi-semantic-release",
+        "bootstrap": "lerna bootstrap",
         "lint": "eslint .",
         "lint:fix": "eslint --fix",
-        "test": "echo \"No test specified\""
+        "test": "echo \"No test specified\"",
+        "clean:nm": "lerna clean && rimraf node_modules",
+        "clean:husky": "rimraf .husky",
+        "clean:nuke": "rimraf yarn.lock && && yarn clean:husky && yarn clean:nm",
+        "clean:reset": "yarn clean:nuke && yarn install"
+    },
+    "volta": {
+        "node": "16.10.0",
+        "yarn": "1.22.11"
     },
     "devDependencies": {
-        "@types/react": "^16.9.46",
-        "@types/react-dom": "^16.9.8",
-        "@typescript-eslint/eslint-plugin": "^3.9.0",
-        "@typescript-eslint/parser": "^3.9.0",
-        "babel-eslint": "^10.1.0",
-        "eslint": "^7.7.0",
-        "eslint-config-airbnb": "^18.2.0",
-        "eslint-config-airbnb-typescript": "^9.0.0",
-        "eslint-config-prettier": "^6.11.0",
-        "eslint-plugin-html": "^6.0.3",
-        "eslint-plugin-import": "^2.22.0",
-        "eslint-plugin-jsx-a11y": "^6.3.1",
-        "eslint-plugin-prettier": "^3.1.4",
-        "eslint-plugin-react": "^7.20.6",
-        "eslint-plugin-react-hooks": "^4.1.0",
-        "prettier": "^2.0.5",
-        "typescript": "3.9.7"
+        "@babel/core": "^7.15.5",
+        "@babel/preset-env": "^7.15.6",
+        "@commitlint/cli": "^13.2.0",
+        "@commitlint/config-conventional": "^13.2.0",
+        "@semantic-release/changelog": "^6.0.0",
+        "@semantic-release/commit-analyzer": "^9.0.1",
+        "@semantic-release/git": "^10.0.0",
+        "@semantic-release/npm": "^8.0.0",
+        "@semantic-release/release-notes-generator": "^10.0.2",
+        "commitizen": "^4.2.4",
+        "cz-conventional-changelog": "^3.3.0",
+        "husky": "^7.0.2",
+        "lerna": "^4.0.0",
+        "lerna-update-wizard": "^0.17.8",
+        "multi-semantic-release": "^2.9.0",
+        "rimraf": "^3.0.2"
     },
-    "peerDependencies": {
-        "@types/react": "^16.9.46",
-        "@types/react-dom": "^16.9.8",
-        "@typescript-eslint/eslint-plugin": "^3.9.0",
-        "@typescript-eslint/parser": "^3.9.0",
-        "babel-eslint": "^10.1.0",
-        "eslint": "^7.7.0",
-        "eslint-config-airbnb": "^18.2.0",
-        "eslint-config-airbnb-typescript": "^9.0.0",
-        "eslint-config-prettier": "^6.11.0",
-        "eslint-plugin-html": "^6.0.3",
-        "eslint-plugin-import": "^2.22.0",
-        "eslint-plugin-jsx-a11y": "^6.3.1",
-        "eslint-plugin-prettier": "^3.1.4",
-        "eslint-plugin-react": "^7.20.6",
-        "eslint-plugin-react-hooks": "^4.1.0",
-        "prettier": "^2.0.5",
-        "typescript": "3.9.7"
-    },
-    "engines": {
-        "node": ">= 10"
+    "workspaces": [
+        "packages/*"
+    ],
+    "config": {
+        "commitizen": {
+            "path": "./node_modules/cz-conventional-changelog"
+        }
     }
 }
