--- a/packages/eslint-config-ts/package.json
+++ b/packages/eslint-config-ts/package.json
@@ -50,10 +50,12 @@
         "@typescript-eslint/parser": "^4.32.0",
         "eslint": "^7.32.0",
         "eslint-config-airbnb": "^18.2.1",
+        "eslint-config-airbnb-base": "^14.2.1",
         "eslint-config-airbnb-typescript": "^14.0.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-html": "^6.2.0",
         "eslint-plugin-import": "^2.24.2",
+        "eslint-plugin-jest": "^24.5.0",
         "eslint-plugin-jsx-a11y": "^6.4.1",
         "eslint-plugin-prettier": "^4.0.0",
         "eslint-plugin-react": "^7.26.1",
@@ -62,10 +64,10 @@
         "typescript": "4.4.3"
     },
     "peerDependencies": {
-        "@babel/core": "^7.15.5",
-        "@babel/preset-env": "^7.15.6",
         "@ascend-innovations/eslint-config": "*",
+        "@babel/core": "^7.15.5",
         "@babel/eslint-parser": "^7.15.7",
+        "@babel/preset-env": "^7.15.6",
         "@typescript-eslint/eslint-plugin": "^4.32.0",
         "@typescript-eslint/parser": "^4.32.0",
         "eslint": "^7.32.0",
