--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -33,9 +33,11 @@
         "@babel/eslint-plugin": "^7.14.5",
         "eslint": "^7.32.0",
         "eslint-config-airbnb": "^18.2.1",
+        "eslint-config-airbnb-base": "^14.2.1",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-html": "^6.2.0",
         "eslint-plugin-import": "^2.24.2",
+        "eslint-plugin-jest": "^24.5.0",
         "eslint-plugin-jsx-a11y": "^6.4.1",
         "eslint-plugin-prettier": "^4.0.0",
         "eslint-plugin-react": "^7.26.1",
@@ -44,10 +46,11 @@
     },
     "peerDependencies": {
         "@babel/core": "^7.15.5",
-        "@babel/preset-env": "^7.15.6",
         "@babel/eslint-parser": "^7.15.7",
+        "@babel/preset-env": "^7.15.6",
         "eslint": "^7.32.0",
         "eslint-config-airbnb": "^18.2.1",
+        "eslint-config-airbnb-base": "^14.2.1",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-html": "^6.2.0",
         "eslint-plugin-import": "^2.24.2",
@@ -58,6 +61,12 @@
         "prettier": "^2.4.1"
     },
     "peerDependenciesMeta": {
+        "eslint-config-airbnb-base": {
+            "optional": true
+        },
+        "eslint-config-airbnb": {
+            "optional": true
+        },
         "eslint-plugin-jsx-a11y": {
             "optional": true
         },
