--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "ascend-eslint-configs",
-    "version": "0.0.0-ascend-eslint",
+    "version": "0.0.0-monorepo-root",
     "description": "Ascend's ESLint config for writing clean, consistent code",
     "private": true,
     "license": "MIT",
@@ -38,7 +38,6 @@
     ],
     "scripts": {
         "prepare": "./.bin/prepare.sh",
-        "release": "multi-semantic-release",
         "bootstrap": "lerna bootstrap",
         "lint": "eslint .",
         "lint:fix": "eslint --fix",
@@ -46,7 +45,8 @@
         "clean:nm": "lerna clean && rimraf node_modules",
         "clean:husky": "rimraf .husky",
         "clean:nuke": "rimraf yarn.lock && && yarn clean:husky && yarn clean:nm",
-        "clean:reset": "yarn clean:nuke && yarn install"
+        "clean:reset": "yarn clean:nuke && yarn install",
+        "release": "changeset publish"
     },
     "volta": {
         "node": "16.10.0",
@@ -55,6 +55,7 @@
     "devDependencies": {
         "@babel/core": "^7.15.5",
         "@babel/preset-env": "^7.15.6",
+        "@changesets/cli": "^2.17.0",
         "@commitlint/cli": "^13.2.0",
         "@commitlint/config-conventional": "^13.2.0",
         "commitizen": "^4.2.4",
