--- a/packages/eslint-config-ts/package.json
+++ b/packages/eslint-config-ts/package.json
@@ -28,8 +28,10 @@
         "lint:fix": "eslint . --ext .js,.ts,.jsx,.tsx --fix",
         "test": "echo \"No test specified\""
     },
+    "dependencies": {
+        "@ascend-innovations/eslint-config": "^0.2.1"
+    },
     "devDependencies": {
-        "@ascend-innovations/eslint-config": "^0.2.1",
         "@babel/eslint-parser": "^7.15.7",
         "@typescript-eslint/eslint-plugin": "^4.32.0",
         "@typescript-eslint/parser": "^4.32.0",
