--- a/packages/stylelint-config/package.json
+++ b/packages/stylelint-config/package.json
@@ -24,18 +24,22 @@
     "homepage": "https://github.com/ascend-innovations/js-toolkit",
     "main": "./index.js",
     "scripts": {
+        "lint:css": "yarn stylelint **/*.css",
+        "lint:css:fix": "yarn stylelint **/*.css --fix",
         "test": "echo \"No test specified\""
     },
+    "dependencies": {
+        "stylelint-declaration-strict-value": "^1.7.12",
+        "stylelint-order": "^4.1.0",
+        "stylelint-config-standard": "^22.0.0"
+    },
     "devDependencies": {
-        "stylelint": "^13.13.1",
-        "stylelint-config-recommended": "^5.0.0",
-        "stylelint-declaration-use-variable": "^1.7.3",
-        "stylelint-order": "^4.1.0"
+        "stylelint": "^13.13.1"
     },
     "peerDependencies": {
         "stylelint": "^13.13.1",
-        "stylelint-config-recommended": "^5.0.0",
-        "stylelint-declaration-use-variable": "^1.7.3",
+        "stylelint-config-standard": "^22.0.0",
+        "stylelint-declaration-strict-value": "^1.7.12",
         "stylelint-order": "^4.1.0"
     },
     "volta": {
