--- a/packages/eslint-config-ts/package.json
+++ b/packages/eslint-config-ts/package.json
@@ -24,12 +24,14 @@
     "homepage": "https://github.com/ascend-innovations/js-toolkit",
     "main": "./index.js",
     "scripts": {
-        "lint": "eslint .",
-        "lint:fix": "eslint --fix",
+        "lint": "eslint . --ext .js,.ts,.jsx,.tsx",
+        "lint:fix": "eslint . --ext .js,.ts,.jsx,.tsx --fix",
         "test": "echo \"No test specified\""
     },
+    "dependencies": {
+        "@ascend-innovations/eslint-config": "^0.2.1"
+    },
     "devDependencies": {
-        "@ascend-innovations/eslint-config": "*",
         "@babel/eslint-parser": "^7.15.7",
         "@typescript-eslint/eslint-plugin": "^4.32.0",
         "@typescript-eslint/parser": "^4.32.0",
@@ -49,23 +51,29 @@
         "typescript": "4.4.3"
     },
     "peerDependencies": {
-        "@ascend-innovations/eslint-config": "*",
-        "@babel/core": "^7.15.5",
+        "@ascend-innovations/eslint-config": "^0.2.1",
         "@babel/eslint-parser": "^7.15.7",
-        "@babel/preset-env": "^7.15.6",
         "@typescript-eslint/eslint-plugin": "^4.32.0",
         "@typescript-eslint/parser": "^4.32.0",
         "eslint": "^7.32.0",
         "eslint-config-airbnb": "^18.2.1",
+        "eslint-config-airbnb-base": "^14.2.1",
         "eslint-config-airbnb-typescript": "^14.0.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-html": "^6.2.0",
         "eslint-plugin-import": "^2.24.2",
+        "eslint-plugin-jest": "^24.5.0",
+        "eslint-plugin-jsx-a11y": "^6.4.1",
         "eslint-plugin-prettier": "^4.0.0",
+        "eslint-plugin-react": "^7.26.1",
+        "eslint-plugin-react-hooks": "^4.2.0",
         "prettier": "^2.4.1",
-        "typescript": "^4.4.3"
+        "typescript": "4.4.3"
     },
     "peerDependenciesMeta": {
+        "eslint-config-airbnb": {
+            "optional": true
+        },
         "eslint-plugin-jsx-a11y": {
             "optional": true
         },
@@ -75,13 +83,7 @@
         "eslint-plugin-react-hooks": {
             "optional": true
         },
-        "prettier": {
-            "optional": true
-        },
-        "eslint-plugin-prettier": {
-            "optional": true
-        },
-        "eslint-config-prettier": {
+        "eslint-plugin-jest": {
             "optional": true
         }
     },
