--- a/packages/stylelint-config/package.json
+++ b/packages/stylelint-config/package.json
@@ -24,20 +24,23 @@
     "homepage": "https://github.com/ascend-innovations/js-toolkit",
     "main": "./index.js",
     "scripts": {
-        "lint": "eslint .",
-        "lint:fix": "eslint --fix",
+        "lint:css": "yarn stylelint **/*.css",
+        "lint:css:fix": "yarn stylelint **/*.css --fix",
         "test": "echo \"No test specified\""
     },
     "dependencies": {
-        "stylelint-config-recommended": "^5.0.0",
-        "stylelint-declaration-use-variable": "^1.7.3",
-        "stylelint-order": "^4.1.0"
+        "stylelint-declaration-strict-value": "^1.7.12",
+        "stylelint-order": "^4.1.0",
+        "stylelint-config-standard": "^22.0.0"
     },
     "devDependencies": {
         "stylelint": "^13.13.1"
     },
     "peerDependencies": {
-        "stylelint": "^13.13.1"
+        "stylelint": "^13.13.1",
+        "stylelint-config-standard": "^22.0.0",
+        "stylelint-declaration-strict-value": "^1.7.12",
+        "stylelint-order": "^4.1.0"
     },
     "volta": {
         "node": "16.10.0",
