feat: establish tests for linting configs

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -1,15 +1,11 @@
-name: Release
+name: Pull Request Valdiation
 on:
-  push:
-    paths:
-      - ".github/**"
-      - ".changeset/**"
-      - "packages/**"
+  pull_request:
     branches:
       - main
 jobs:
   release:
-    name: 🚀 Release Cycle 📦
+    name: Validation
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repo
