--- a/package.json
+++ b/package.json
@@ -42,9 +42,7 @@
         "bootstrap": "lerna bootstrap --use-workspaces",
         "lint": "lerna run lint",
         "lint:fix": "lerna run lint:fix",
-        "lint:css": "lerna run lint:css",
-        "lint:css:fix": "lerna run lint:css:fix",
-        "test": "echo \"No test specified\"",
+        "test": "lerna run test",
         "clean:nm": "lerna clean && rimraf node_modules",
         "clean:husky": "rimraf .husky",
         "clean:nuke": "rimraf yarn.lock && yarn clean:husky && yarn clean:nm",
