--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -24,13 +24,16 @@
     "homepage": "https://github.com/ascend-innovations/js-toolkit",
     "main": "./index.js",
     "scripts": {
-        "lint": "eslint .",
+        "lint": "eslint . --print-config",
         "lint:fix": "eslint --fix",
-        "test": "echo \"No test specified\""
+        "test:js": "eslint __tests__/test.js",
+        "test:js:react": "eslint __tests__/test.jsx --config ./react.js",
+        "test": "yarn test:js && yarn test:js:react"
     },
     "devDependencies": {
         "@babel/eslint-parser": "^7.15.7",
         "@babel/eslint-plugin": "^7.14.5",
+        "@babel/preset-react": "^7.14.5",
         "eslint": "^7.32.0",
         "eslint-config-airbnb": "^18.2.1",
         "eslint-config-airbnb-base": "^14.2.1",
