--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -1,8 +1,6 @@
 name: Pull Request Validation
 on:
-  pull_request:
-    branches:
-      - main
+  pull_request
 jobs:
   validate:
     name: Validate
