--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,7 +25,7 @@ jobs:
 
       # Frozen lockfile is best for CI/CD + we are ignoring scripts to prevent our "prepare" scripts from running (husky hooks don't work in GH Actions)
       - name: Install dependencies
-        run: yarn install --frozen-lockfile --ignore-scripts && yarn bootstrap
+        run: yarn install --frozen-lockfile --ignore-scripts
 
       # ! ALL COMMITS MUST BE SIGNED
       # ! DO NOT TIE YOUR CI/CD COMMITS TO A PERSON. ALWAYS USE THE ASCEND ENGINEERING USER.
@@ -40,7 +40,7 @@ jobs:
           git_commit_gpgsign: true
 
       # Auto-generate CHANGELOG, create tagged release, bump `package.json` version, publish to npm (via changesets)
-      - name: Create Release Pull Request or Publish to npm
+      - name: Create Release Pull Request or Publish to NPM
         id: changesets
         uses: changesets/action@master
         with:
