--- a/packages/eslint-config-ts/package.json
+++ b/packages/eslint-config-ts/package.json
@@ -36,6 +36,7 @@
         "@ascend-innovations/eslint-config": "^1.0.1"
     },
     "devDependencies": {
+        "@babel/core": "^7.15.5",
         "@babel/eslint-parser": "^7.15.7",
         "@babel/preset-react": "^7.14.5",
         "@typescript-eslint/eslint-plugin": "^4.32.0",
@@ -57,6 +58,7 @@
     },
     "peerDependencies": {
         "@ascend-innovations/eslint-config": "^1.0.1",
+        "@babel/core": "^7.15.5",
         "@babel/eslint-parser": "^7.15.7",
         "@typescript-eslint/eslint-plugin": "^4.32.0",
         "@typescript-eslint/parser": "^4.32.0",
