--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -31,6 +31,7 @@
         "test": "yarn test:js && yarn test:js:react"
     },
     "devDependencies": {
+        "@babel/core": "^7.15.5",
         "@babel/eslint-parser": "^7.15.7",
         "@babel/eslint-plugin": "^7.14.5",
         "@babel/preset-react": "^7.14.5",
@@ -48,6 +49,7 @@
         "prettier": "^2.4.1"
     },
     "peerDependencies": {
+        "@babel/core": "^7.15.5",
         "@babel/eslint-parser": "^7.15.7",
         "@babel/eslint-plugin": "^7.14.5",
         "eslint": "^7.32.0",
