feat(eslint-config-ts): added svelte to eslint-config-ts

--- a/packages/eslint-config-ts/package.json
+++ b/packages/eslint-config-ts/package.json
@@ -30,7 +30,8 @@
         "test:js:react": "eslint __tests__/test.jsx --config ./react.js",
         "test:ts": "eslint __tests__/test.ts",
         "test:ts:react": "eslint __tests__/test.tsx --config ./react.js",
-        "test": "yarn test:js && yarn test:js:react && yarn test:ts && yarn test:ts:react"
+        "test:ts:svelte": "eslint __tests__/test.svelte --config ./svelte.js",
+        "test": "yarn test:js && yarn test:js:react && yarn test:ts && yarn test:ts:react && yarn test:ts:svelte"
     },
     "dependencies": {
         "@ascend-innovations/eslint-config": "^1.0.2"
