fix(eslint-ts): apply proper configs to local project files

--- a/packages/eslint-config-ts/.eslintrc.json
+++ b/packages/eslint-config-ts/.eslintrc.json
@@ -1,3 +1,17 @@
 {
-    "extends": "./"
+    "extends": "./",
+    "overrides": [
+        {
+            "files": [
+                "**/*.jsx"
+            ],
+            "extends": "./react"
+        },
+        {
+            "files": [
+                "**/*.svelte"
+            ],
+            "extends": "./svelte"
+        }
+    ]
 }
