--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -24,48 +24,46 @@
     "homepage": "https://github.com/ascend-innovations/js-toolkit",
     "main": "./index.js",
     "scripts": {
-        "lint": "eslint . --print-config",
-        "lint:fix": "eslint --fix",
-        "test:js": "eslint __tests__/test.js",
-        "test:js:react": "eslint __tests__/test.jsx --config ./react.js",
-        "test:js:svelte": "eslint __tests__/test.svelte --config ./svelte.js",
+        "lint": "eslint . --ext .js,.jsx,.svelte",
+        "lint:fix": "yarn lint --fix",
+        "test:js": "eslint __tests__/javascript.js",
+        "test:js:react": "eslint __tests__/react.jsx --config ./react.js",
+        "test:js:svelte": "eslint __tests__/svelte.svelte --config ./svelte.js",
         "test": "yarn test:js && yarn test:js:react && yarn test:js:svelte"
     },
     "devDependencies": {
-        "@babel/core": "^7.15.5",
-        "@babel/eslint-parser": "^7.15.7",
-        "@babel/eslint-plugin": "^7.14.5",
-        "@babel/preset-react": "^7.14.5",
-        "eslint": "^7.32.0",
-        "eslint-config-airbnb": "^18.2.1",
-        "eslint-config-airbnb-base": "^14.2.1",
-        "eslint-config-prettier": "^8.3.0",
+        "@babel/core": "^7.16.10",
+        "@babel/eslint-parser": "^7.16.5",
+        "@babel/eslint-plugin": "^7.16.5",
+        "@babel/preset-react": "^7.16.7",
+        "eslint": "^8.7.0",
+        "eslint-config-airbnb": "^19.0.4",
+        "eslint-config-airbnb-base": "^15.0.0",
         "eslint-plugin-html": "^6.2.0",
-        "eslint-plugin-import": "^2.24.2",
-        "eslint-plugin-jest": "^24.5.0",
-        "eslint-plugin-jsx-a11y": "^6.4.1",
-        "eslint-plugin-prettier": "^4.0.0",
-        "eslint-plugin-react": "^7.26.1",
-        "eslint-plugin-react-hooks": "^4.2.0",
-        "prettier": "^2.4.1",
+        "eslint-plugin-import": "^2.25.4",
+        "eslint-plugin-jest": "^25.7.0",
+        "eslint-plugin-jsx-a11y": "^6.5.1",
+        "eslint-plugin-react": "^7.28.0",
+        "eslint-plugin-react-hooks": "^4.3.0",
         "eslint-plugin-svelte3": "^3.4.0",
-        "svelte": "^3.46.1"
+        "svelte": "^3.46.2"
     },
     "peerDependencies": {
-        "@babel/core": "^7.15.5",
-        "@babel/eslint-parser": "^7.15.7",
-        "@babel/eslint-plugin": "^7.14.5",
-        "eslint": "^7.32.0",
-        "eslint-config-airbnb": "^18.2.1",
-        "eslint-config-airbnb-base": "^14.2.1",
+        "@babel/core": "^7.16.10",
+        "@babel/eslint-parser": "^7.16.5",
+        "@babel/eslint-plugin": "^7.16.5",
+        "eslint": "^8.7.0",
+        "eslint-config-airbnb": "^19.0.4",
+        "eslint-config-airbnb-base": "^15.0.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-html": "^6.2.0",
-        "eslint-plugin-import": "^2.24.2",
-        "eslint-plugin-jest": "^24.5.0",
-        "eslint-plugin-jsx-a11y": "^6.4.1",
+        "eslint-plugin-import": "^2.25.4",
+        "eslint-plugin-jest": "^25.7.0",
+        "eslint-plugin-jsx-a11y": "^6.5.1",
         "eslint-plugin-prettier": "^4.0.0",
-        "eslint-plugin-react": "^7.26.1",
-        "eslint-plugin-react-hooks": "^4.2.0",
+        "eslint-plugin-react": "^7.28.0",
+        "eslint-plugin-react-hooks": "^4.3.0",
+        "eslint-plugin-svelte3": "^3.4.0",
         "prettier": "^2.4.1"
     },
     "peerDependenciesMeta": {
@@ -89,7 +87,6 @@
         }
     },
     "volta": {
-        "node": "16.10.0",
-        "yarn": "1.22.11"
+       "extends": "../../package.json"
     }
 }
